--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,17 @@ h1{
     font-weight:600;
     font-size:18px;
     color: #296C82;
+    display:block;
+    margin:0 auto;
+    transition-property: background-color, color;
+    transition-duration: 0.24s;
+    transition-timing-function: ease-in-out;
+}
+
+.main__btn:hover{
+    background-color: #296C82;
+    color:#fff;
+
 }
 .selection{
     padding:50px;
@@ -119,7 +130,17 @@ h1{
     display:flex;
     flex-direction: column;
     overflow-y:auto;
-    max-height: 100%;
+    max-height: 100%
+
+}
+
+.selection__list::-webkit-scrollbar{
+    width:6px;
+}
+
+.selection__list::-webkit-scrollbar-thumb{
+    background: rgba(140, 140, 140,0.1);
+    border-radius:8px;
 }
 .selection__item{
     display:flex;
@@ -137,10 +158,12 @@ h1{
     font-weight: 600;
     font-size:22px;
     border:none;
-    background: #F1F9FB;
+    background-color: #F1F9FB;
     border-radius: 12px;
 }
-
+.selection__theme:hover{
+    background-color: #e3f4f8;
+}
 .selection__theme:not(:last-child) {
     margin-right: 20px;
 }
@@ -164,5 +187,258 @@ h1{
 }
 
 .selection__result{
-    max-width: 63px;
+    width:min-content;
 }
+
+.main__box_question{
+    padding:60px 120px;
+    height: auto;
+    min-height:540px;
+    
+}
+
+.main__form-question::after{
+    content:attr(data-count);
+    position: absolute;
+    bottom:0;
+    right:0;
+   
+}
+
+.main__form-question{
+    position: relative;
+}
+
+.answer{
+    display: block;
+    margin-bottom:26px;
+    font-weight: 600;
+    font-size:18px;
+    position: relative;
+    padding-left: 65px;
+}
+
+.answer__checkbox{
+    position: absolute;
+    -webkit-appearance: none;
+    -moz-appearence:none;
+    appearance: none;
+    width:40px; 
+    height: 40px;
+    margin:0 0 0 -65px;
+
+    
+}
+
+.answer__checkbox::before{
+    content:"";
+    position: absolute;
+    top:0;
+    left:0;
+    display: block;
+    width:40px;
+    height: 40px;
+    background-color: #fff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+}
+
+.answer__checkbox::after{
+    content:"";
+    position: absolute;
+    top:15px;
+    left:12px;
+    height:8px;
+    width:17px;
+    border:2px solid #434343 ;
+    border-top:none;
+    border-right:none;
+    opacity: 0;
+    transform:rotate(-45deg);
+    transition:opacity 0.24s ease;
+}
+
+.answer__checkbox:checked:after{
+    opacity:1;
+}
+
+.answer__checkbox:focus:before,
+.answer__checkbox:hover:before{
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+
+.answer__radio{ 
+    position: absolute;
+    -webkit-appearance: none;
+    -moz-appearence:none;
+    appearance: none;
+    width:40px; 
+    height: 40px;
+    margin:0 0 0 -65px;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    
+}
+
+.answer__radio::before{
+    content:"";
+    position: absolute;
+    top:0;
+    left:0;
+    display: block;
+    width:40px;
+    height: 40px;
+    background-color: #fff;
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.15);
+    border-radius: 50%;
+}
+
+
+.answer__radio::after{
+    content:"";
+    position: relative;
+    z-index: inherit;
+    border-radius:50%;
+    height:14px;
+    width:14px;
+    background-color:#434343;
+    opacity: 0;
+    transition:opacity 0.24s ease;
+}
+
+.answer__radio:checked:after{
+    opacity:1;
+}
+
+.answer__radio:focus:before,
+.answer__radio:hover:before{
+    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+}
+
+.main__box_result{
+    padding:60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.result__box{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    margin-bottom: auto;
+
+}
+
+.result__ratio{
+    width:127px;
+    height: 127px;
+    display: flex;
+    align-items:center;
+    justify-content: center;
+    background-color:#8C8C8C;
+    border-radius:50%;
+    color: #fff;
+    font-weight: 600;
+    font-size: 32px;
+    margin-bottom: 20px;
+
+}
+
+.result__ratio_1{
+    background-color: #49F050;
+}
+.result__ratio_2{
+    background-color: #EFCF24;
+}
+.result__ratio_3{
+    background-color: #DC1C1C;
+}
+.result__text{
+    font-weight: 600;
+    font-size: 18px;
+}
+
+@media (max-width: 1024px) {
+    .selection__list{
+        padding-right: 30px;
+    }
+    .selection__theme{
+        font-size:20px;
+    }
+}
+
+@media (max-width: 768px) {
+    .header__container{
+        padding:0 20px;
+    }
+
+    .main {
+        padding:40px 20px;
+    }
+
+    .main__title {
+        font-size:34px;
+    }
+
+    .main__box{
+        padding:40px;
+    }
+
+    .selection__list{
+        padding-right: 15px;
+    }
+
+    .selection__theme{
+        font-size:18px;
+        padding:10px 15px;
+    }
+    
+    .selection__item {
+        margin-bottom: 10px;
+    }
+
+    .selection__result-text{
+        display: none;
+    }
+
+    .selection__result{
+        display: flex;
+        align-items:center;
+    }
+
+    .selection__theme:not(:last-child) {
+        margin-right: 15px;
+    }
+}
+
+@media (max-width: 560px) {
+    .main__btn:not(.result__return){
+        margin-left:0;
+        min-width:100%;
+    }
+
+    .main__form-question::after{
+        bottom:-35px;
+    }
+
+    .main__subtitle{
+        font-size:20px;
+    }
+
+    .main {
+        padding:30px 10px;
+    }
+
+    .main__box{
+        padding:15px;
+        border-radius:15px;
+    }
+    .selection__result-ratio{
+        font-size:18px;
+    }
+}
+
